--- a/homeworks/src/p2-homeworks/h1/Message.module.css
+++ b/homeworks/src/p2-homeworks/h1/Message.module.css
@@ -1,3 +1,32 @@
 .message {
-
+    display: flex;
+    align-items: flex-end;
+    margin: 10px;
 }
+
+.avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.content {
+    display: flex;
+    width: 200px;
+    height: 40px;
+    padding: 10px;
+    border: black solid 1px;
+    border-radius: 5px 5px 5px 0px;
+}
+
+.name {
+   font-size: 14px;
+    font-weight: bold;
+    margin: 0px;
+}
+
+.name {
+    color: red;
+}
+
+
