--- a/homeworks/src/p2-homeworks/h1/Message.module.css
+++ b/homeworks/src/p2-homeworks/h1/Message.module.css
@@ -11,22 +11,33 @@
 }
 
 .content {
-    display: flex;
-    width: 200px;
-    height: 40px;
     padding: 10px;
     border: black solid 1px;
     border-radius: 5px 5px 5px 0px;
+    background-color: black;
+}
+
+.corner {
+    width: 15px;
+    height: 15px;
+    background: radial-gradient(circle at 0 0, rgb(250,250,250) 15px, rgb(0,0,0) 0);
 }
 
 .name {
-   font-size: 14px;
+    font-size: 14px;
     font-weight: bold;
-    margin: 0px;
+    color: darkviolet;
+}
+.text {
+    min-width: 150px;
+    max-width: 300px;
+    word-wrap: break-word;
+    color: #fff;
 }
 
-.name {
-    color: red;
+.time {
+    display: flex;
+    justify-content: flex-end;
+    color: #fff;
 }
-
 
