--- a/homeworks/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/homeworks/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -10,18 +10,18 @@
     font-weight: 700;
     color: white;
     text-decoration: none;
-    padding: 2vh 10vh;
+    padding: 5px 20px;
     border-radius: 2px;
-    background: rgb(64, 199, 129);
-    box-shadow: 0 -3px rgb(53, 167, 110) inset;
-    transition: 0.2s;
+    background: rgb(26, 42, 220);
+    box-shadow: 0 -5px rgb(12, 31, 134) inset;
+    transition: 0.5s;
 }
 
 .button:hover {
-    background: rgb(53, 167, 110);
+    background: rgb(12, 31, 134);
 }
 
 .button:active {
-    background: rgb(33, 147, 90);
-    box-shadow: 0 3px rgb(33, 147, 90) inset;
+    background: rgb(12, 31, 134);
+    box-shadow: 0 3px rgb(12, 31, 134) inset;
 }
